--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -173,6 +173,7 @@
     <DCCReference Include="i_ITileStorageTypeConfig.pas" />
     <DCCReference Include="i_ITileStorageTypeInfo.pas" />
     <DCCReference Include="i_ITileStorageTypeList.pas" />
+    <DCCReference Include="i_ITileStorageTypeListItem.pas" />
     <DCCReference Include="i_IUrlByCoordProvider.pas" />
     <DCCReference Include="i_IUsedMarksConfig.pas" />
     <DCCReference Include="i_IValueToStringConverter.pas" />
@@ -575,6 +576,7 @@
     <DCCReference Include="u_TileStorageGEStuped.pas" />
     <DCCReference Include="u_TileStorageTypeInfo.pas" />
     <DCCReference Include="u_TileStorageTypeList.pas" />
+    <DCCReference Include="u_TileStorageTypeListItem.pas" />
     <DCCReference Include="u_TileStorageTypeListSimple.pas" />
     <DCCReference Include="u_UrlGenerator.pas" />
     <DCCReference Include="u_UsedMarksConfig.pas" />
