--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -174,6 +174,7 @@
     <DCCReference Include="i_ITileStorageTypeInfo.pas" />
     <DCCReference Include="i_ITileStorageTypeList.pas" />
     <DCCReference Include="i_ITileStorageTypeListItem.pas" />
+    <DCCReference Include="i_ITrackWriter.pas" />
     <DCCReference Include="i_IUrlByCoordProvider.pas" />
     <DCCReference Include="i_IUsedMarksConfig.pas" />
     <DCCReference Include="i_IValueToStringConverter.pas" />
