--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -460,6 +460,7 @@
     <DCCReference Include="u_ImageResamplerFactoryListStaticSimple.pas" />
     <DCCReference Include="u_ImportByFileExt.pas" />
     <DCCReference Include="u_ImportConfig.pas" />
+    <DCCReference Include="u_ImportHLG.pas" />
     <DCCReference Include="u_ImportKML.pas" />
     <DCCReference Include="u_ImportPLT.pas" />
     <DCCReference Include="u_InetConfig.pas" />
