--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -140,6 +140,11 @@
     <DCCReference Include="i_IMapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="i_IMapViewGoto.pas" />
     <DCCReference Include="i_IMarkCategory.pas" />
+    <DCCReference Include="i_IMarkCategoryFactory.pas" />
+    <DCCReference Include="i_IMarkCategoryFactoryConfig.pas" />
+    <DCCReference Include="i_IMarkCategoryFactoryDbInternal.pas" />
+    <DCCReference Include="i_IMarkFactory.pas" />
+    <DCCReference Include="i_IMarkFactoryDbInternal.pas" />
     <DCCReference Include="i_IMarkNameGenerator.pas" />
     <DCCReference Include="i_IMarkPicture.pas" />
     <DCCReference Include="i_IMarkPolygonLayerConfig.pas" />
@@ -510,6 +515,8 @@
     <DCCReference Include="u_MapViewPortStateNew.pas" />
     <DCCReference Include="u_MarkCategory.pas" />
     <DCCReference Include="u_MarkCategoryDB.pas" />
+    <DCCReference Include="u_MarkCategoryFactory.pas" />
+    <DCCReference Include="u_MarkCategoryFactoryConfig.pas" />
     <DCCReference Include="u_MarkFactory.pas" />
     <DCCReference Include="u_MarkLine.pas" />
     <DCCReference Include="u_MarkLineTemplateConfig.pas" />
