Переименование юнитов с интерфейсами

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -114,23 +114,8 @@
     <DCCReference Include="i_GPSModuleByCOMPortSettings.pas" />
     <DCCReference Include="i_GPSRecorder.pas" />
     <DCCReference Include="i_GSMGeoCodeConfig.pas" />
-    <DCCReference Include="i_ILanguageManager.pas" />
-    <DCCReference Include="i_ILastSelectionInfo.pas" />
-    <DCCReference Include="i_ILastSelectionLayerConfig.pas" />
-    <DCCReference Include="i_ILineOnMapEdit.pas" />
-    <DCCReference Include="i_IListOfObjectsWithTTL.pas" />
-    <DCCReference Include="i_ILocalCoordConverter.pas" />
-    <DCCReference Include="i_ILocalCoordConverterFactorySimpe.pas" />
-    <DCCReference Include="i_ILogForTaskThread.pas" />
-    <DCCReference Include="i_ILogSimple.pas" />
     <DCCReference Include="i_ImageResamplerConfig.pas" />
     <DCCReference Include="i_ImageResamplerFactory.pas" />
-    <DCCReference Include="i_IMainFormBehaviourByGPSConfig.pas" />
-    <DCCReference Include="i_IMainGeoCoderConfig.pas" />
-    <DCCReference Include="i_IMainMemCacheConfig.pas" />
-    <DCCReference Include="i_IMainWindowPosition.pas" />
-    <DCCReference Include="i_IMapCalibration.pas" />
-    <DCCReference Include="i_IMapLayerGPSMarkerConfig.pas" />
     <DCCReference Include="i_IMapLayerGPSTrackConfig.pas" />
     <DCCReference Include="i_IMapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="i_IMapViewGoto.pas" />
@@ -186,7 +171,22 @@
     <DCCReference Include="i_JclListenerNotifierLinksList.pas" />
     <DCCReference Include="i_KmlInfoSimpleLoader.pas" />
     <DCCReference Include="i_KmlLayerConfig.pas" />
+    <DCCReference Include="i_LanguageManager.pas" />
+    <DCCReference Include="i_LastSelectionInfo.pas" />
+    <DCCReference Include="i_LastSelectionLayerConfig.pas" />
+    <DCCReference Include="i_LineOnMapEdit.pas" />
+    <DCCReference Include="i_ListOfObjectsWithTTL.pas" />
+    <DCCReference Include="i_LocalCoordConverter.pas" />
+    <DCCReference Include="i_LocalCoordConverterFactorySimpe.pas" />
+    <DCCReference Include="i_LogForTaskThread.pas" />
+    <DCCReference Include="i_LogSimple.pas" />
+    <DCCReference Include="i_MainFormBehaviourByGPSConfig.pas" />
     <DCCReference Include="i_MainFormConfig.pas" />
+    <DCCReference Include="i_MainGeoCoderConfig.pas" />
+    <DCCReference Include="i_MainMemCacheConfig.pas" />
+    <DCCReference Include="i_MainWindowPosition.pas" />
+    <DCCReference Include="i_MapCalibration.pas" />
+    <DCCReference Include="i_MapLayerGPSMarkerConfig.pas" />
     <DCCReference Include="i_MapLayerGridsConfig.pas" />
     <DCCReference Include="i_MapTypeIconsList.pas" />
     <DCCReference Include="i_MapTypes.pas" />
