Переименование юнитов с интерфейсами

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -116,20 +116,6 @@
     <DCCReference Include="i_GSMGeoCodeConfig.pas" />
     <DCCReference Include="i_ImageResamplerConfig.pas" />
     <DCCReference Include="i_ImageResamplerFactory.pas" />
-    <DCCReference Include="i_IMapLayerGPSTrackConfig.pas" />
-    <DCCReference Include="i_IMapLayerNavToPointMarkerConfig.pas" />
-    <DCCReference Include="i_IMapViewGoto.pas" />
-    <DCCReference Include="i_IMarkCategory.pas" />
-    <DCCReference Include="i_IMarkCategoryFactory.pas" />
-    <DCCReference Include="i_IMarkCategoryFactoryConfig.pas" />
-    <DCCReference Include="i_IMarkCategoryFactoryDbInternal.pas" />
-    <DCCReference Include="i_IMarkFactory.pas" />
-    <DCCReference Include="i_IMarkFactoryDbInternal.pas" />
-    <DCCReference Include="i_IMarkNameGenerator.pas" />
-    <DCCReference Include="i_IMarkPicture.pas" />
-    <DCCReference Include="i_IMarkPolygonLayerConfig.pas" />
-    <DCCReference Include="i_IMarkPolyLineLayerConfig.pas" />
-    <DCCReference Include="i_IMarksFactoryConfig.pas" />
     <DCCReference Include="i_IMemObjCache.pas" />
     <DCCReference Include="i_IMiniMapLayerConfig.pas" />
     <DCCReference Include="i_ImportConfig.pas" />
@@ -187,10 +173,24 @@
     <DCCReference Include="i_MainWindowPosition.pas" />
     <DCCReference Include="i_MapCalibration.pas" />
     <DCCReference Include="i_MapLayerGPSMarkerConfig.pas" />
+    <DCCReference Include="i_MapLayerGPSTrackConfig.pas" />
     <DCCReference Include="i_MapLayerGridsConfig.pas" />
+    <DCCReference Include="i_MapLayerNavToPointMarkerConfig.pas" />
     <DCCReference Include="i_MapTypeIconsList.pas" />
     <DCCReference Include="i_MapTypes.pas" />
+    <DCCReference Include="i_MapViewGoto.pas" />
+    <DCCReference Include="i_MarkCategory.pas" />
+    <DCCReference Include="i_MarkCategoryFactory.pas" />
+    <DCCReference Include="i_MarkCategoryFactoryConfig.pas" />
+    <DCCReference Include="i_MarkCategoryFactoryDbInternal.pas" />
+    <DCCReference Include="i_MarkFactory.pas" />
+    <DCCReference Include="i_MarkFactoryDbInternal.pas" />
+    <DCCReference Include="i_MarkNameGenerator.pas" />
+    <DCCReference Include="i_MarkPicture.pas" />
+    <DCCReference Include="i_MarkPolygonLayerConfig.pas" />
+    <DCCReference Include="i_MarkPolyLineLayerConfig.pas" />
     <DCCReference Include="i_Marks.pas" />
+    <DCCReference Include="i_MarksFactoryConfig.pas" />
     <DCCReference Include="i_MarksSimple.pas" />
     <DCCReference Include="i_MemCache.pas" />
     <DCCReference Include="MapLayers\u_CalcLineLayer.pas" />
