Переименование юнитов с интерфейсами

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -116,16 +116,8 @@
     <DCCReference Include="i_GSMGeoCodeConfig.pas" />
     <DCCReference Include="i_ImageResamplerConfig.pas" />
     <DCCReference Include="i_ImageResamplerFactory.pas" />
-    <DCCReference Include="i_IMemObjCache.pas" />
-    <DCCReference Include="i_IMiniMapLayerConfig.pas" />
     <DCCReference Include="i_ImportConfig.pas" />
     <DCCReference Include="i_ImportFile.pas" />
-    <DCCReference Include="i_INavigationToPoint.pas" />
-    <DCCReference Include="i_IObjectWithTTL.pas" />
-    <DCCReference Include="i_IPathDetalizeProvider.pas" />
-    <DCCReference Include="i_IPolygonLayerConfig.pas" />
-    <DCCReference Include="i_IPolyLineLayerConfig.pas" />
-    <DCCReference Include="i_IPoolElement.pas" />
     <DCCReference Include="i_IPosChangeMessage.pas" />
     <DCCReference Include="i_IProxySettings.pas" />
     <DCCReference Include="i_ISatellitesInViewMapDraw.pas" />
@@ -193,6 +185,14 @@
     <DCCReference Include="i_MarksFactoryConfig.pas" />
     <DCCReference Include="i_MarksSimple.pas" />
     <DCCReference Include="i_MemCache.pas" />
+    <DCCReference Include="i_MemObjCache.pas" />
+    <DCCReference Include="i_MiniMapLayerConfig.pas" />
+    <DCCReference Include="i_NavigationToPoint.pas" />
+    <DCCReference Include="i_ObjectWithTTL.pas" />
+    <DCCReference Include="i_PathDetalizeProvider.pas" />
+    <DCCReference Include="i_PolygonLayerConfig.pas" />
+    <DCCReference Include="i_PolyLineLayerConfig.pas" />
+    <DCCReference Include="i_PoolElement.pas" />
     <DCCReference Include="MapLayers\u_CalcLineLayer.pas" />
     <DCCReference Include="MapLayers\u_CenterScale.pas" />
     <DCCReference Include="MapLayers\u_LayerScaleLine.pas" />
