--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -66,6 +66,9 @@
     <DCCReference Include="frm_InvisibleBrowser.pas">
       <Form>frmInvisibleBrowser</Form>
     </DCCReference>
+    <DCCReference Include="frm_MarkCategoryEdit.pas">
+      <Form>frmMarkCategoryEdit</Form>
+    </DCCReference>
     <DCCReference Include="frm_SearchResults.pas">
       <Form>frmSearchResults</Form>
     </DCCReference>
@@ -317,9 +320,6 @@
     <DCCReference Include="src\u_WideStrings.pas" />
     <DCCReference Include="t_CommonTypes.pas" />
     <DCCReference Include="t_GeoTypes.pas" />
-    <DCCReference Include="UAddCategory.pas">
-      <Form>frmMarkCategoryEdit</Form>
-    </DCCReference>
     <DCCReference Include="UaddLine.pas">
       <Form>FaddLine</Form>
     </DCCReference>
