--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -372,7 +372,7 @@
       <Form>FSettings</Form>
     </DCCReference>
     <DCCReference Include="UShortcutEditor.pas">
-      <Form>FShortcutChange</Form>
+      <Form>frmShortCutEdit</Form>
     </DCCReference>
     <DCCReference Include="UTimeZones.pas" />
     <DCCReference Include="UYaMobile.pas" />
