--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -345,7 +345,6 @@
       <Form>FDGAvailablePic</Form>
     </DCCReference>
     <DCCReference Include="Ugeofun.pas" />
-    <DCCReference Include="UGSM.pas" />
     <DCCReference Include="Uimgfun.pas" />
     <DCCReference Include="UImport.pas">
       <Form>FImport</Form>
@@ -556,6 +555,7 @@
     <DCCReference Include="u_PoolOfObjectsSimple.pas" />
     <DCCReference Include="u_PosChangeListener.pas" />
     <DCCReference Include="u_PosChangeMessage.pas" />
+    <DCCReference Include="u_PosFromGSM.pas" />
     <DCCReference Include="u_ProxyConfig.pas" />
     <DCCReference Include="u_SatellitesInViewMapDrawSimple.pas" />
     <DCCReference Include="u_SaveLoadTBConfigByConfigProvider.pas" />
