--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -370,7 +370,6 @@
     <DCCReference Include="UProgress.pas">
       <Form>FProgress</Form>
     </DCCReference>
-    <DCCReference Include="UResStrings.pas" />
     <DCCReference Include="u_ActiveMapConfig.pas" />
     <DCCReference Include="u_ActiveMapSingleAbstract.pas" />
     <DCCReference Include="u_ActiveMapsSet.pas" />
@@ -556,6 +555,7 @@
     <DCCReference Include="u_PosChangeMessage.pas" />
     <DCCReference Include="u_PosFromGSM.pas" />
     <DCCReference Include="u_ProxyConfig.pas" />
+    <DCCReference Include="u_ResStrings.pas" />
     <DCCReference Include="u_SatellitesInViewMapDrawSimple.pas" />
     <DCCReference Include="u_SaveLoadTBConfigByConfigProvider.pas" />
     <DCCReference Include="u_ScaleLineConfig.pas" />
