Продолжаю ковырять на тему датчиков

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -227,6 +227,8 @@
     <DCCReference Include="i_SelectionPolygonLayerConfig.pas" />
     <DCCReference Include="i_SelectionRectLayerConfig.pas" />
     <DCCReference Include="i_Sensor.pas" />
+    <DCCReference Include="i_SensorListGenerator.pas" />
+    <DCCReference Include="i_SensorViewListGenerator.pas" />
     <DCCReference Include="i_SimpleFactory.pas" />
     <DCCReference Include="i_StatBarConfig.pas" />
     <DCCReference Include="i_Thread.pas" />
@@ -564,8 +566,11 @@
     <DCCReference Include="u_SelectionPolygonLayerConfig.pas" />
     <DCCReference Include="u_SelectionRectLayerConfig.pas" />
     <DCCReference Include="u_SensorBase.pas" />
+    <DCCReference Include="u_SensorListGeneratorStuped.pas" />
     <DCCReference Include="u_SensorsFromGPSRecorder.pas" />
     <DCCReference Include="u_SensorTextFromGPSRecorder.pas" />
+    <DCCReference Include="u_SensorViewConfigSimple.pas" />
+    <DCCReference Include="u_SensorViewListGeneratorStuped.pas" />
     <DCCReference Include="u_SensorViewTextTBXPanel.pas" />
     <DCCReference Include="u_ShortcutManager.pas" />
     <DCCReference Include="u_StatBarConfig.pas" />
