--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -569,6 +569,7 @@
     <DCCReference Include="u_SensorListGeneratorStuped.pas" />
     <DCCReference Include="u_SensorsFromGPSRecorder.pas" />
     <DCCReference Include="u_SensorTextFromGPSRecorder.pas" />
+    <DCCReference Include="u_SensorTextFromNavToPoint.pas" />
     <DCCReference Include="u_SensorViewConfigSimple.pas" />
     <DCCReference Include="u_SensorViewListGeneratorStuped.pas" />
     <DCCReference Include="u_SensorViewTextTBXPanel.pas" />
